--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div id="main">
     <!--Program circles will be added to this svg-->
-    <svg id="main-svg"></svg>
+    <svg id="main-svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="1.414"></svg>
   </div>
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
