--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 	<div class="container about-container">
 		<div class="text-left col-md-offset-1 col-lg-offset-1 col-xs-6 col-s-6 col-md-5 col-lg-5 about-col">
 			<h2 class="green">ABOUT</h2>
-			<p>This project was created by eight students as part of the course Information Visualizaton at KTH in which we were to create a visualization of our choice. The data behind the visualization was retrieved from LinkedIn, Wikipedia and KTH Alumni.</p>
+			<p>This project was created by eight students as a part of the course DH2321 Information Visualizaton at KTH in which we were to create a visualization of our choice. The data behind the visualization was retrieved from LinkedIn, Wikipedia and KTH Alumni.</p>
 		</div>
 		<div class="text-left col-xs-6 col-s-6 col-md-5 col-lg-5">
 			<h2 class="pink">PURPOSE</h2>
