--- a/about.html
+++ b/about.html
@@ -44,89 +44,12 @@
     <hr class="about-line col-md-12" />
     <div class="creators-wrapper">
       <h2 class="blue">Creators</h2>
-      <div class="creator col-md-3">
-        <img src="img/ulrika.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Ulrika Andersson</h4>
-        <a class="btn" href="mailto:anniean@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/ulrika-andersson-9b5b9667/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/julian.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Julian Héden</h4>
-        <a class="btn" href="mailto:pjheden@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/julian-hedén-b7b2ba110">
-            <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/ellinor.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Ellinor Jutterström</h4>
-        <a class="btn" href="mailto:eju@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/ellinor-jutterström-747a01114">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/esra.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Esra Kahraman</h4>
-        <a class="btn" href="mailto:esrak@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://www.linkedin.com/in/esra-kahraman-989761115">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a>        
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/johan.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Johan Kitti Söderberg</h4>
-        <a class="btn" href="mailto:johanks@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/johankittisoderberg/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/caroline.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Caroline Lindström</h4>
-        <a class="btn" href="mailto:calindst@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/caroline-lindström-b943b465">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/erik.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Erik Markström</h4>
-        <a class="btn" href="mailto:erimar@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/erik-markström-66077aa8/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/rodrigo.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Rodrigo Roa Rodríguez</h4>
-        <a class="btn" href="mailto:rorr@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
+
     </div>
 	</div>
 
+  <script type="text/javascript" src="d3/d3.min.js"></script>
+  <script type="text/javascript" src="js/about.js"></script>
 </body>
 
 </html>
