--- a/about.html
+++ b/about.html
@@ -40,7 +40,10 @@
 			<h2 class="pink">PURPOSE</h2>
 			<p>Engineer Your Future enables current and future students at KTH to explore opportunities based on their education. The goal is to give students a vision of what their education can bring whether it be career, profession or skills.</p>
 		</div>
-
+    <hr class="about-line col-md-12" />
+    <div class="col-xs-12 col-s-12 col-md-12 col-lg-12">
+      <iframe src="https://player.vimeo.com/video/160347172" width="700" height="481" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
     <hr class="about-line col-md-12" />
     <div class="creators-wrapper">
       <h2 class="blue">Creators</h2>
