Icon to browser bar added

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="/img/icon.png"/>
 </head>
 
 <body class="about-body">
