Tooltips for collaborations

--- a/about.html
+++ b/about.html
@@ -47,11 +47,12 @@
     <hr class="about-line col-md-12" />
     <div class="creators-wrapper">
       <h2 class="blue">Creators</h2>
-
+        <!-- Creator profiles inserter here by about.js -->
     </div>
 	</div>
 
   <script type="text/javascript" src="d3/d3.min.js"></script>
+  <script type="text/javascript" src="js/classes.js"></script>
   <script type="text/javascript" src="js/about.js"></script>
 </body>
 
