--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="/img/icon.png"/>
 </head>
 
 <body class="about-body">
@@ -24,7 +25,7 @@
       </div>
       <div class="collapse navbar-collapse" id="navList">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">VISUALIZATION</a></li>
+          <li><a href="index.html">VISUALIZATION</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
       </div>
@@ -34,99 +35,27 @@
 	<div class="container about-container">
 		<div class="text-left col-md-offset-1 col-lg-offset-1 col-xs-6 col-s-6 col-md-5 col-lg-5 about-col">
 			<h2 class="green">ABOUT</h2>
-			<p>This project was created by eight students as part of the course Information Visualizaton at KTH in which we were to create a visualization of our choice. The data behind the visualization was retrieved from LinkedIn, Wikipedia and KTH Alumni.</p>
+			<p>This project was created by eight students as a part of the course DH2321 Information Visualizaton at KTH in which we were to create a visualization of our choice. The data behind the visualization was retrieved from LinkedIn, Wikipedia and KTH Alumni. As for the visualization, D3.js was used along with Javascript, HTML and CSS.The work tasks were coordinated using Trello, and the actual coding collaboration was done through Github.</p>
 		</div>
 		<div class="text-left col-xs-6 col-s-6 col-md-5 col-lg-5">
 			<h2 class="pink">PURPOSE</h2>
 			<p>Engineer Your Future enables current and future students at KTH to explore opportunities based on their education. The goal is to give students a vision of what their education can bring whether it be career, profession or skills.</p>
 		</div>
-
+    <hr class="about-line col-md-12" />
+    <div class="col-xs-12 col-s-12 col-md-12 col-lg-12">
+      <iframe src="https://player.vimeo.com/video/160347172" width="700" height="481" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
     <hr class="about-line col-md-12" />
     <div class="creators-wrapper">
       <h2 class="blue">Creators</h2>
-      <div class="creator col-md-3">
-        <img src="img/ulrika.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Ulrika Andersson</h4>
-        <a class="btn" href="mailto:anniean@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/ulrika-andersson-9b5b9667/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/julian.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Julian Héden</h4>
-        <a class="btn" href="mailto:pjheden@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/julian-hedén-b7b2ba110">
-            <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/ellinor.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Ellinor Jutterström</h4>
-        <a class="btn" href="mailto:eju@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/ellinor-jutterström-747a01114">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/esra.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Esra Kahraman</h4>
-        <a class="btn" href="mailto:esrak@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://www.linkedin.com/in/esra-kahraman-989761115">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a>        
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/johan.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Johan Kitti Söderberg</h4>
-        <a class="btn" href="mailto:johanks@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/johankittisoderberg/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/caroline.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Caroline Lindström</h4>
-        <a class="btn" href="mailto:calindst@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/caroline-lindström-b943b465">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/erik.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Erik Markström</h4>
-        <a class="btn" href="mailto:erimar@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="https://se.linkedin.com/in/erik-markström-66077aa8/sv">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
-      <div class="creator col-md-3">
-        <img src="img/rodrigo.jpg" class="img-circle creator-img">
-        <h4 class="yellow">Rodrigo Roa Rodríguez</h4>
-        <a class="btn" href="mailto:rorr@kth.se">
-          <i class="fa fa-envelope-o fa-lg"></i>
-        </a> 
-        <a class="btn" href="">
-          <i class="fa fa-linkedin-square fa-lg"></i>
-        </a> 
-      </div>
+        <!-- Creator profiles inserter here by about.js -->
     </div>
 	</div>
 
+  <script type="text/javascript" src="d3/d3.min.js"></script>
+  <script type="text/javascript" src="js/classes.js"></script>
+  <script type="text/javascript" src="js/about.js"></script>
 </body>
 
 </html>
+Status API Training Shop Blog About
